--- a/packages.bib
+++ b/packages.bib
@@ -62,6 +62,15 @@
   url = {https://CRAN.R-project.org/package=ggstatsplot},
 }
 
+@Manual{R-gtfstools,
+  title = {gtfstools: General Transit Feed Specification (GTFS) Editing and Analysing
+Tools},
+  author = {Daniel Herszenhut and Rafael H. M. Pereira and Pedro R. Andrade and Joao Bazzo},
+  year = {2022},
+  note = {R package version 1.2.0},
+  url = {https://CRAN.R-project.org/package=gtfstools},
+}
+
 @Manual{R-gtsummary,
   title = {gtsummary: Presentation-Ready Data Summary and Analytic Result Tables},
   author = {Daniel D. Sjoberg and Joseph Larmarange and Michael Curry and Jessica Lavery and Karissa Whiting and Emily C. Zabor},
