--- a/References.bib
+++ b/References.bib
@@ -171,19 +171,6 @@ keywords = {Local transit -- Management; Urban transportation -- Management; @ S
 	volume = {73},
 	year = {2003}}
 	
-	
-@inproceedings{Reynolds:2017ah,
-	abstract = {There is wide agreement that prioritising on-road public transport services is beneficial, but considerable uncertainty about how best to implement priority measures in practice. As yet it is unclear why some transit priority schemes receive political, institutional and public support while others are blocked, cancelled or compromised, often for non-technical reasons. This paper explores how public policy analysis concepts can be adapted to describe and potentially improve transit priority implementation. Previous evaluation approaches have focused on the traffic, mobility and economic impacts of transit priority measures. What has been missing is a consideration of how politics, institutional arrangements and other non-rational factors influence priority implementation. This paper describes the major forms of policy analysis (rationalism, institutionalism, incrementalism, political approaches and the `garbage can' model) and uses each to develop new conceptual models of priority implementation. Institutional and top-down models emphasise the government's control over the road and transit system. They suggest that better policies and centralisation of decision-making might improve priority implementation. In contrast, bottom-up implementation theories and what is termed the `garbage can' model emphasise the influence of street-level actors and project team members. These suggest that understanding the drivers of individuals' opinions, strategies and decision-making is necessary to improve implementation and outcomes. Incrementalism based models, on the other hand, suggest using a series of small changes to gradually increase the level of transit priority over time instead of a large, and potentially controversial, single step. This paper provides an initial move beyond the prevailing `techno-rationalist' approaches to transit priority implementation. It concludes with a description of opportunities for future research to test these new models and to explore the political, institutional and other factors influencing transit priority implementation},
-	address = {Auckland, New Zealand},
-	author = {Reynolds, James and Currie, Graham and Rose, Geoff and Cumming, Alistair},
-	booktitle = {Australasian Transport Research Forum 2017},
-	date = {November 27 to 29, 2017},
-	date-added = {2023-01-08 14:01:53 +1100},
-	date-modified = {2023-01-08 14:02:01 +1100},
-	id = {930},
-	title = {Moving beyond techno-rationalism: new models of transit priority implementation},
-	year = {2017}}
-	
 	@article{GuzmanLuisA.2017Aeit,
 issn = {0966-6923},
 abstract = {This research was aimed at exploring levels of equity in accessibility to employment and education in the city-region of Bogotá, Colombia's capital city. Building on consolidated methodologies for the assessment of potential accessibility, we estimate accessibility indicators at the zone level, evaluate how potential accessibility varies among income groups, and present evidence related to transport mode, in order to analyze social and spatial inequalities produced by the distribution of accessibility to employment and education activities. The research incorporates a method to evaluate how accessibility varies among zones according to average income and mode of transport in order to produce evidence-based arguments that can inform transport policy in the city-region of Bogotá, and other similar contexts in the Global South. Our results show strong distributional effects of the socio-spatial and economic structure of the city-region, its transport infrastructure and services, and the effect of current transport and land-use policies for citizens of different income groups. The tools and empirical evidence in this research seek to contribute to informed policy development in Latin America and other developing contexts, and feeding current debates on the role of accessibility in addressing social and spatial inequalities stemming from urban mobility.},
@@ -215,6 +202,23 @@ URL = { https://doi.org/10.1080/01441647.2020.1762795},
 eprint = {https://doi.org/10.1080/01441647.2020.1762795}
 }
 
+
+@Manual{tidytransit_departure_timetable,
+  title = {tidytransit: generate a departure timetable },
+  author = {Flavio Poletti},
+  year = {undated},
+  note = {R package version 1.5.0, last accessed June 22, 2023},
+  url = {https://r-transit.github.io/tidytransit/articles/timetable.html},
+}
+
+
+@Manual{filter_GTFS_by_mode,
+  title = {gtfstools; filter GTFS object by route_type (transport mode)},
+  author = {Danile Herszenhut and Rafael H. M. Pereira and Pedro R. Andrade and Joao Bazzo},
+  year = {undated},
+  note = {R package version 1.2.0.9000, last accessed June 30, 2023},
+  url = {https://ipeagit.github.io/gtfstools/reference/filter_by_route_type.html},
+}
 
 
 	
