--- a/References.bib
+++ b/References.bib
@@ -213,7 +213,7 @@ eprint = {https://doi.org/10.1080/01441647.2020.1762795}
 
 
 @Manual{filter_GTFS_by_mode,
-  title = {gtfstools; filter GTFS object by route_type (transport mode)},
+  title = {gtfstools; filter GTFS object by route type (transport mode)},
   author = {Danile Herszenhut and Rafael H. M. Pereira and Pedro R. Andrade and Joao Bazzo},
   year = {undated},
   note = {R package version 1.2.0.9000, last accessed June 30, 2023},
